...
    <string name="error_station_load">Could not connect to station</string>
    <string name="error_list_update">Could not connect to radio browser server</string>

    <string name="share_action">Share station link with..</string>

    <string name="nav_item_stations">Stations</string>
    <string name="nav_item_starred">Favorites</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_alarm">Alarm</string>

    <string name="about_text">This app uses the free radio station directory at\nhttps://www.radio-browser.info\nEveryone can add stations to it or edit existing stations. It works like a wiki for online (streaming) radio stations.\n\nContact:\nsegler_alex@web.de\n\nBugtracker:\nhttps://github.com/segler-alex/RadioDroid/issues\n\nIf you like the software and want to help, feel free to send me an e
    <string name="about_version">Version: %1$s</string>
    <string name="detail_star">Add to favorites</string>
    <string name="detail_unstar">Delete from favorites</string>
    <string name="progress_loading">Loading...</string>
...
